# quaere

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md
.github/workflows/: ci.yml  eval-manual.yml  eval-terminal-bench.yml  pages.yml  release.yml
Formula/: quaere.rb
cli/: Cargo.toml  build.rs  package.json  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
cli/src/: cli.ts  main.rs  manifest.rs  paths.rs  skill_meta.rs
cli/src/commands/: doctor.rs  doctor.ts  eval.rs  install.rs  install.ts  list.rs  list.ts  mod.rs  update.rs  version.rs
cli/src/lib/: frontmatter.ts  skills.ts
docs/: Codex skill read depth.md  cli-contracts.md  evaluation.md  roadmap.md  skill-optimization-plan.md
eval-fixtures/authorized-implementation-loop/: PLAN.md
eval-fixtures/no-web-local-grounding/: .syncignore  README.md
eval-fixtures/quaere-audit-jwt-spec/: README.md  spec.md
eval-fixtures/quaere-audit-tenant-isolation/: README.md
eval-fixtures/quaere-semantic-cache/: README.md
eval-fixtures/quaere-semantic-scheduler/: README.md
eval-fixtures/sdk-version-grounding/: README.md  package-lock.json  package.json
evals/: README.md  run_skill_evals.py  scenarios.ja.json  scenarios.json
examples/: README.md
npm-pkg/: .gitignore  .oxlintrc.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  tsup.config.ts
scripts/: install.sh  validate_skills.py
tests/: test_run_skill_evals.py  test_skill_golden.py  test_terminal_bench_adapter.py  test_validate_skills.py  test_validator_parity.py
web/: CNAME  index.html
(+101 files in other folders)
