[package]
name = "quaere-cli"
version = "0.2.0"
edition = "2021"
description = "Install and manage Quaere process-correction skills for coding agents."
license = "MIT"
repository = "https://github.com/haru0416-dev/quaere"
readme = "../README.md"
keywords = ["claude", "agent", "skill", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.78"

[[bin]]
name = "quaere"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
dirs = "6"
semver = "1"
ureq = { version = "3", default-features = false, features = ["json", "rustls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
